# typist

./: CMakeLists.txt  LICENSE.txt
cmake/: helpers.cmake  typistConfig.cmake
include/typist/: typist.hpp
tests/: tests.cpp
